--- a/Tyuiu.DolgovIV.Sprint6.Task2.V10/Tyuiu.DolgovIV.Sprint6.Task2.V10.csproj
+++ b/Tyuiu.DolgovIV.Sprint6.Task2.V10/Tyuiu.DolgovIV.Sprint6.Task2.V10.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.Sprint6.DolgovIV.Task2.V10.Lib\Tyuiu.Sprint6.DolgovIV.Task2.V10.Lib.csproj" />
+    <ProjectReference Include="..\Tyuiu.DolgovIV.Sprint6.Task2.V10.Lib\Tyuiu.DolgovIV.Sprint6.Task2.V10.Lib.csproj" />
   </ItemGroup>
 
 </Project>
